# snake_proto_template

./: .gitignore  README.md  pyproject.toml  setup.py
snake_proto_template/: generate.py  generate.sh  remote_snake.proto  sim_msgs.proto
snake_proto_template/python/: main.py  remote_snake_pb2.py  remote_snake_pb2_grpc.py  sim_msgs_pb2.py  sim_msgs_pb2_grpc.py  user_code.py
