[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "grpcio-tools"
]
build-backend = "setuptools.build_meta"


[project]
name = "snake_proto_template"
version = "0.1.1"
description = "A template for Python projects using gRPC and Protocol Buffers."
authors = [
    { name = "Jesper Fritsch" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.69.0",
    "protobuf>=5.29.3",
    "grpcio-tools>=1.69.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]